--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 *, body{
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 
@@ -14,15 +15,17 @@
     font-family: Poppins;
     font-weight: 700;
 }
-
 .nav-item>a {
     text-transform: uppercase;
     text-decoration: none;
     letter-spacing: 0.15em;
-    
     display: inline-block;
     padding: 15px 20px;
     position: relative;
+    color: #5d72b6;
+  }
+  .nav-item>a:hover {
+    color: #4561be;
   }
   .nav-item>a:after {    
     background: none repeat scroll 0 0 transparent;
@@ -32,7 +35,7 @@
     height: 3px;
     left: 50%;
     position: absolute;
-    background: #ffffff;
+    background: #5d72b6;
     transition: width 0.3s ease 0s, left 0.3s ease 0s;
     width: 0;
   }
@@ -46,12 +49,17 @@
     font-family: "Pangolin", cursive;
     font-weight: 400;
     font-style: normal;
+    
 }
 .offcanvas-title{
     font-family: "Pangolin", cursive;
     font-weight: 400;
     font-style: normal;
 }
+.nav-item>a.nav-link.active{
+    color: #3355C2;
+}
+
 
 /* body */
 
@@ -74,9 +82,13 @@ i{
 .playlist-link{
     color: rgb(236, 236, 236);
 }
+.navblur{
+    backdrop-filter: blur(7px);
+}
 
 .navbar{
-    background-color: rgba(255, 255, 255, 0.301);
+    background-color: rgba(255, 255, 255, 0.75);
+    box-shadow: 0px 10px 20px -4px rgba(0,0,0,0.75);
     }
 .copyright{
     position: fixed;     
@@ -85,14 +97,201 @@ i{
     width: 100%;
 }
 .copyright>a{
-    color: rgba(255, 255, 255, 0.623);
+    color: rgba(0, 0, 0, 0.658);
     text-decoration: none;
     font-family: Poppins;
     transition-duration: .5s;
 }
 .fa-instagram{
-    color: rgba(255, 255, 255, 0.623);
+    color: rgba(0, 0, 0, 0.658);
 }
 .copyright>a:hover{
     text-decoration: underline;
 }
+
+/* home */
+.home-container{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    align-items: center;
+    padding-top: 3vw;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 7px;
+    padding-bottom: 3vw;
+}
+.home-container img{
+    width: 40rem;
+    border-radius: 10px;
+}
+.home-container .carousel{
+    width: 40rem;
+    border-radius: 10px;
+    padding: 0;
+    margin-top: -1rem;
+}
+.darkenimage{
+    filter: brightness(.7)
+}
+.home-container h3.satu{
+    color: #d3d3d3;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+}
+/* structure */
+.structure-content{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    align-items: center;
+    padding-top: 3vw;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 7px;
+    padding-bottom: 3vw;
+}
+.structure-content img{
+    width: 40rem;
+    border-radius: 10px;
+}
+
+
+
+/* news */
+.news-content{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    align-items: center;
+    padding-top: 3vw;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 7px;
+    padding-bottom: 3vw;
+}
+.news-content img.satu{
+    width: 40rem;
+    border-radius: 5px;
+}
+
+/* news isi */
+.news-isi{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    align-items: center;
+    padding-top: 3vw;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-items: center;
+}
+
+.news-isi>h5{
+    color: gray;
+    overflow: hidden;
+}
+.news-isi>p{
+    width: 56vw;
+}
+.news-isi>img.news-header{
+    width: 80vw;
+    border-radius: 4px;
+}
+.news-isi>img.news-foto{
+    width: 56vw;
+    border-radius: 4px;
+}
+
+/* more */
+.more-content{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    align-items: center;
+    padding-top: 3vw;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 7px;
+    padding-bottom: 3vw;
+}
+.more-content img{
+    width: 40rem;
+    border-radius: 10px;
+}
+/* acipment */
+.achipments{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    align-items: center;
+    padding-top: 3vw;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 7px;
+    padding-bottom: 3vw;
+}
+.achipments img{
+    width: 40rem;
+    border-radius: 10px;
+}
+.achipments img.heder{
+    width: 90vw;
+    border-radius: 10px;
+}
+/* section */
+.sect-container{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    align-items: center;
+    padding-top: 3vw;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 7px;
+    padding-bottom: 3vw;
+    margin-top: -2rem;
+}
+.sect-container img{
+    width: 70vw;
+    border-radius: 10px;
+}
+
+
+
+@media screen and (max-width: 526px) {
+    .structure-content img{
+        width: 90vw;
+        border-radius: 10px;
+    }
+    .home-container img{
+        width: 90vw;
+    }
+    .more-content img{
+        width: 90vw;
+    }
+    .news-content img.satu{
+        width: 90vw;
+    }
+    .home-container .carousel{
+        width: 90vw;
+    }
+    .achipments img{
+        width: 90vw;
+    }
+    .sect-container img{
+        width: 90vw;
+    }
+  } 
